--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,26 @@ body{
     font-family: "Roboto", sans-serif;
     background-color:#FFFFFF;
     color:#434455;
+  
 }
+
+@media (max-width: 767px) {
+    body {
+        font-size: 14px; /* Зменшити шрифт на малих екранах */
+    }
+}
+
 img{
     display: block;
 }
 h1, h2, h3, h4, h5, h6, p{
     margin: 0;
+}
+h1{
+    font-family: "Roboto", sans-serif;
+    font-size: 56px;
+    line-height: 60px;
+    letter-spacing: 2%;
 }
 /* header */
 .headd{
@@ -15,15 +29,35 @@ h1, h2, h3, h4, h5, h6, p{
 margin:0;
 box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
+.headd .container{
+
+    display: flex;
+  justify-content: space-between;
+}
 .header-container{
     display:flex;
     align-items:center;
 }
-.container{
-    width: 1158px;
-    margin: 0 auto;
+.container {
+    max-width: 320px;
     padding: 0 15px;
-}
+    margin: 0 auto;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .container {
+      max-width: 768px;
+    }
+  }
+  
+  @media screen and (min-width: 1158px) {
+    .container {
+      max-width: 1158px;
+      padding: 0 15px;
+      align-items: center;
+    }
+  }
 .nvvv{
     display: flex;
     align-items: center;
@@ -37,7 +71,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     text-transform: uppercase;
     color:#4d5ae5;
     line-height: 1.17;
-    margin-right: 76px
+    margin-right: 76px;
 }
 .menuu{
     display: flex; 
@@ -97,12 +131,7 @@ content: '';
     color: #2e2f42;
 }
 
-h1{
-    font-family: "Roboto", sans-serif;
-    font-size: 56px;
-    line-height: 60px;
-    letter-spacing: 2%;
-}
+
 
 
 
@@ -141,52 +170,281 @@ h1{
 .number:focus{
     color:#404bbf;
 }
+
+@media (max-width:767px){
+    .number{
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+    .menufiles{
+        opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+    }
+
+    .current{
+        opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .header-logo {
+      margin-right: 76px;
+    }
+    .addresss {
+      flex-direction: row;
+      align-items: center;
+      gap: 40px;
+    }
+    .number {
+      padding: 24px 0;
+      font-size: 16px;
+      line-height: 1.15;
+      letter-spacing: 0.02em;
+    }
+  }
+
+/* mobile style */
+
+.mobile-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  
+
+.mobile-menu-container {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+  }
+  
+  .mobile-button-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-button:hover,
+  .mobile-button:focus {
+    background-color: #404bbf;
+    border: none;
+  }
+  
+  .mobile-button:hover > .mobile-button-icon.icon,
+  .mobile-button:focus > .mobile-button-icon.icon {
+    fill: #ffffff;
+  }
+  .mobile-menu-nav {
+    margin-bottom: auto;
+  }
+  
+  .mobile-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .mobile-menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu-link:hover {
+    color: #404bbf;
+  }
+  .mobile-menu-contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .mobile-menu-contacts-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu-contacts-link:hover {
+    color: #4d5ae5;
+  }
+  .mobile-social-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 48px;
+  }
+  .mobile-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    fill: #fff;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-social-link:hover,
+  .mobile-social-link:focus {
+    background-color: #404bbf;
+  }
+  .social-icon {
+    fill: #f4f4fd;
+  }
+
+
+
+@media  (max-width: 767px) {
+     
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  } 
+}
+
+@media  (min-width: 768px){
+    .mobile-menu-close{
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+}
+
+
 /* first-page */
+/* @media screen and (min-resolution:192dpi){
 .sect{
-    background-color:#2e2f42;
-    padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-    max-width: 1440px;
+    background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/people-office@2x.jpg);
+}
+} */
+
+.sect{
+    max-width:320px;
+    max-height:432px;
+    margin-right:auto;
+    margin-left:auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-mobile.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin-left:auto;
     margin-right:auto;
+    padding: 188px 0;
 }
 
-.effective{
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    max-width: 496px;
-    margin-bottom:48px;
-    margin-left:auto;
-    margin-right:auto;
+@media screen and (min-width:768px)  {
+.sect{
+    max-width:768px;
+    max-height:436px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-tablet.jpg');
 }
+}
+@media screen and (max-width:767px)  and (min-resolution:192dpi){
+  .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url('../images/bg-mobile@2x.jpg');
+  }
+
+
+  @media screen and (max-width:1999px)  and (min-resolution:192dpi){
+    .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url('../images/bg-tablet@2x.jpg');
+    }
+  }
+
+}
+
+@media screen and (min-width:1200px)  and (min-resolution:192dpi){
+    .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url('../images/bg-desktop@2x.jpg');
+    }
+  }
+
+@media screen and (min-width:1200px){
+.sect {
+    max-width: 1440px;
+    max-height: 600px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-dekstop.jpg');
+    
+}
+}
+
+
+.effective {
+    max-width: 216px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin: 0 auto;
+    margin-bottom: 72px;
+  }
 
 .but{
-    background-color: #4D5AE5;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+    font-weight: 500;
     letter-spacing: 0.04em;
-    color: #ffffff;
+    background: #4d5ae5;
+    color: #fff;
     cursor: pointer;
     display: block;
     min-width: 169px;
-    border: 0; 
-    border-radius: 4px; 
+    height: 56px;
     padding: 16px 32px;
-    margin:0 auto;
-    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 }
 
+.but:hover {
+    background-color: #404bbf;
+  }
+  .but:focus {
+    background-color: #404bbf;
+  }
+
+  @media screen and (min-width: 768px) {
+    .effective {
+      max-width: 496px;
+      font-size: 56px;
+      line-height: 1.1;
+      margin-bottom: 36px;
+    }
+  }
+  @media screen and (min-width: 1158px) {
+    .effective {
+      margin-bottom: 48px;
+    }
+  }
+
 /* section number two */
+
+
 .secttwo{
     padding: 120px 0;
 }
@@ -384,7 +642,7 @@ h1{
     padding: 0;
     white-space: nowrap;
     clip-path: inset(100%);
-    clip: rect(0 0 0 0);
+    clip: rect(0,0, 0, 0);
     overflow: hidden;
 }
 /* section number four */
