--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,129 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
       align-items: center;
     }
   }
-.nvvv{
+
+  .addresss,
+  .menuu{
+    display:none;
+  }
+
+  .page-title{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+  }
+
+  .studio{
+    color: #2e2f42;
+  }
+
+  .header-logo {
+    padding: 16px 0;
+    display: block;
+  }
+  .burger-btn {
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+  }
+
+  .burger-icon {
+    display: block;
+    fill: #2f2f37;
+  }
+
+  @media screen and (min-width: 768px) {
+    .burger-btn {
+      display: none;
+    }
+    .menuu {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+    .nvvv {
+      display: flex;
+      align-items: center;
+    }
+    .header-logo {
+      padding: 24px 0;
+      margin-right: 120px;
+    }
+    .menufiles {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: #434455;
+      padding: 24px 0;
+      display: block;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .menufiles .current {
+      position: relative;
+    }
+    .menufiles .current::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      width: 100%;
+      height: 4px;
+      color: #404bbf;
+      background-color: #404bbf;
+      border-radius: 2px;
+    }
+  
+    .addresss {
+      font-style: normal;
+      display: block;
+    }
+    .addr {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .number {
+      display: block;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.04em;
+      color: #434455;
+  
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .menufiles:hover,
+    .menufiles:focus,
+  .addr :hover,
+  .addr :focus,
+  .menufiles.current {
+    color: #404bbf;
+  }
+
+  @media screen and (min-width: 1158px) {
+    .header-logo {
+      margin-right: 76px;
+    }
+    .menuu {
+      flex-direction: row;
+      align-items: center;
+      gap: 40px;
+    }
+    .addr {
+      padding: 24px 0;
+      font-size: 16px;
+      line-height: 1.15;
+      letter-spacing: 0.02em;
+    }
+  }
+}
+
+
+/* .nvvv{
     display: flex;
     align-items: center;
 
@@ -205,7 +327,7 @@ content: '';
       line-height: 1.15;
       letter-spacing: 0.02em;
     }
-  }
+  } */
 
 /* mobile style */
 
