--- a/css/styles.css
+++ b/css/styles.css
@@ -175,14 +175,19 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     }
     
     .addr {
-      padding: 24px 0;
-      font-size: 16px;
-      line-height: 1.15;
-      letter-spacing: 0.02em;
       flex-direction: row;
-        gap: 40px;
+      align-items: center;
+      gap: 40px;
     }
   }
+
+  @media screen and (min-width: 768px) {
+    .addr {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+}
 
 
 
@@ -862,133 +867,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   }
 }
 
-/* .bakcgr{
-    padding: 100px 0;
-}
 
-.logotwo{
-    margin-bottom: 16px;
-    display: inline-block; 
-}
-
-.fotit{
-    max-width: 264px;
-}
-
-
-.footer-section{
-    display:flex;
-    align-items: baseline;
-}
-.footer-div-section{
-    margin-right: 120px;
-}
-.footer-parag-social-media{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:#FFFFFF;
-    margin-bottom: 16px;
-}
-.footer-social-media-ul{
-    display: flex;
-    gap: 16px; 
-
-}
-.page-logo-icon-footer{
-    fill:#f4f4fd;
-}
-.footer-element-social-media{
-    width: 40px;
-    height:40px;
-
-
-}
-.social-links-footer{
-    width: 100%;
-    height:100%;
-    background-color:#4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-links-footer:hover{
-    background-color: #31d0aa; 
-}
-.social-links-footer:focus{
-    background-color: #31d0aa; 
-} */
-/* subscribe input */
-/* .modal-hidden{
-    margin-left:auto;
-   
-}
-.sub-modal{
-    margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em; 
-    color: #ffffff;
-
-}
-
-.modal-form{
-    display:flex;
-    gap: 24px;
-}
-
-.label-form-modal{
-    gap: 24px;
-}
-
-.footer-email-modal{
-    width: 264px;
-    height:40px;
-    border: 1px solid #ffffff;
-    background-color: transparent;
-    font-size: 12px; 
-    line-height: 2;
-    letter-spacing: 0.04em;
-    padding-left: 16px; 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    color: #ffffff;
-    
-}
-
-.footer-email-modal::placeholder{
-    color: #ffffff;
-}
-
-.but-modal-footer{
-    min-width: 165px; 
-    height: 40px; 
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
-    border: none;
-    border-radius: 4px; 
-    
-    
-}
-
-.page-logo-icon-modal{
-    margin-left:16px;
-
-
-} */
 
 
 /* Modal overlay */
