--- a/css/styles.css
+++ b/css/styles.css
@@ -1036,6 +1036,14 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   border: none;
   fill: #f4f4fd;
 }
+.modal-overlay-svgfile-email{
+  position: absolute;
+  left: 16px;
+  top: 50%; 
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 .modal-button {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
