--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,15 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 .container {
     max-width: 320px;
-    padding: 0 15px;
+    padding: 0 16px;
     margin: 0 auto;
   }
-  
+  @media screen and (max-width:767px){
+
+    .page-title{
+      z-index:1
+    }
+  }
   @media screen and (min-width: 768px) {
     .container {
       max-width: 768px;
@@ -193,6 +198,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
       align-items: center;
       gap: 40px;
     }
+    
 }
 
 
@@ -209,6 +215,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      z-index:999;
   }
   
   
@@ -246,7 +253,19 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     flex-direction: column;
     gap: 40px;
   }
-  .mobile-menu-link {
+  .mobile-menu-adress {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+  .mobile-menu-adress:hover {
+    color: #404bbf;
+  }
+
+  .menufiles-phone{
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -254,13 +273,17 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .mobile-menu-link:hover {
+  .menufiles-phone:hover{
     color: #404bbf;
   }
+.current{
+  color: #404bbf;
+}
   .mobile-menu-contacts-list {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    margin-top:250px;
   }
   .mobile-menu-contacts-link {
     font-weight: 500;
@@ -269,6 +292,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-style:normal;
   }
   .mobile-menu-contacts-link:hover {
     color: #4d5ae5;
@@ -299,7 +323,15 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     fill: #f4f4fd;
   }
 
-
+.phone{
+  font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-style:normal;
+}
 
 @media  (max-width: 767px) {
      
@@ -308,6 +340,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     visibility: visible;
     pointer-events: auto;
   } 
+  
 }
 
 @media  (min-width: 768px){
@@ -316,7 +349,9 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
         visibility: hidden;
         pointer-events: none;
     }
-
+    .mobile-container{
+      display:none;
+    }
 }
 
 
@@ -330,50 +365,49 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .sect{
     max-width:420px;
-    max-height:500px;
+   
     margin-right:auto;
     margin-left:auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-mobile.jpg');
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/Dark-bg-phone.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin-left:auto;
-    margin-right:auto;
-    padding: 188px 0;
+   
+    padding: 72px 0;
 }
 
 @media screen and (min-width:768px)  {
 .sect{
     max-width:768px;
-    max-height:436px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-tablet.jpg');
+   padding:112px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/Dark-bg-tablet.jpg');
 }
 }
 @media screen and (max-width:767px)  and (min-resolution:192dpi){
   .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url('../images/bg-mobile@2x.jpg');
+    url('../images/Dark-bg-phone@2x.jpg');
   }
 
 
   @media screen and (max-width:1999px)  and (min-resolution:192dpi){
     .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-      url('../images/bg-tablet@2x.jpg');
+      url('../images/people-office@2x.jpg');
     }
   }
 
 }
 
-@media screen and (min-width:1200px)  and (min-resolution:192dpi){
+@media screen and (max-width:1200px)  and (min-resolution:192dpi){
     .sect{  background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-      url('../images/bg-desktop@2x.jpg');
+      url('../images/Dark-bg-tablet@2x.jpg');
     }
   }
 
 @media screen and (min-width:1200px){
 .sect {
     max-width: 1440px;
-    max-height: 600px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/bg-dekstop.jpg');
+    padding:188px,0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office\ 1.jpg');
     
 }
 }
@@ -442,8 +476,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     display: flex;
     flex-direction: column;
     row-gap: 72px;
-    margin-top: 96px;
-    margin-bottom: 96px;
+    
   }
 
   .str {
@@ -462,7 +495,10 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     letter-spacing: 0.02em;
     color: #434455;
   }
-
+.page{
+  padding-top: 96px;
+    padding-bottom: 96px;
+}
   @media screen and (min-width: 768px) {
     .secondpage {
       flex-direction: row;
@@ -475,11 +511,15 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     .str {
       text-align: left;
     }
+    .page {
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
   }
   @media screen and (min-width: 1158px) {
     .page {
       padding-top: 120px;
-      padding-bottom: 12px;
+      padding-bottom: 120px;
     }
   
     .page-items {
@@ -513,6 +553,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     background-color: #f4f4fd;
     padding-top: 96px;
     padding-bottom: 96px;
+    padding-left:10px;
   }
   
   .team {
@@ -535,9 +576,11 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
       0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+      background-color: #fff;
   }
   .afff {
     padding: 32px 0;
+    
   }
   
   .main-photo {
@@ -724,13 +767,14 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 /* footer */
 .footer {
   background: #2e2f42;
-  padding-top: 96px;
-  padding-bottom: 96px;
+ 
 }
 .footer-container {
   display: flex;
   flex-direction: column;
   row-gap: 72px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .footer-container-top {
   display: flex;
@@ -781,7 +825,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   color: #ffffff;
   border: 1px solid #ffffff;
   border-radius: 4px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   padding-left: 16px;
   outline: none;
@@ -822,13 +866,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   margin-left: 16px;
 }
 @media screen and (min-width: 768px) {
-  .footer {
-    padding-left: 108px;
-  }
+ 
   .footer-container {
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 24px;
+    padding-left: 108px;
   }
   .footer-container-top {
     display: flex;
@@ -842,14 +885,16 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     flex-wrap: wrap;
     column-gap: 24px;
   }
+  .footer-input{
+    width:264px;
+  }
 }
 @media screen and (min-width: 1158px) {
-  .footer {
-    padding: 100px 0;
-  }
+  
   .footer-container {
     display: flex;
     align-items: baseline;
+    padding: 100px 0;
   }
   .footer-container-top {
     margin-right: 104px;
@@ -885,6 +930,15 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     height:100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .modal {
   padding-top: 72px;
@@ -1061,6 +1115,10 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-div-email{
+  position:relative;
+}
+
 @media screen and (min-width: 768px) {
   .modal {
     width: 408px;
